# t3-claw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COVERAGE_PLAN.md  Cargo.toml  DEBUGGING.md  DOCKER.md  Dockerfile  Dockerfile.test  Dockerfile.worker  FEATURE_PARITY.md  Makefile  README.md  bastionclaw.bash  bastionclaw.fish  bastionclaw.zsh  clippy.toml  deny.toml  docker-compose.yml  release-plz.toml  t3claw.bash  t3claw.fish  t3claw.zsh
crates/t3claw_safety/: CHANGELOG.md  Cargo.toml
crates/t3claw_safety/benches/: safety_check.rs  safety_pipeline.rs
crates/t3claw_safety/fuzz/: Cargo.toml  README.md
crates/t3claw_safety/fuzz/fuzz_targets/: fuzz_config_env.rs  fuzz_credential_detect.rs  fuzz_leak_detector.rs  fuzz_safety_sanitizer.rs  fuzz_safety_validator.rs
crates/t3claw_safety/src/: credential_detect.rs  leak_detector.rs  lib.rs  policy.rs  sanitizer.rs  sensitive_paths.rs  validator.rs
deploy/: setup.sh
deploy-gcp/: README.md  env.example  gcp-provision.sh  startup-script.sh  t3claw.service  vm-setup.sh  wif-setup.sh
docker/: t3n-mcp-bridge.mjs  t3n-mcp-sidecar.Dockerfile
docs/: docs.json  index.mdx  onboard.mdx  quickstart.mdx  security.mdx  tunnel.mdx
fuzz/: Cargo.toml  README.md
migrations/: V19__channel_identities.sql  V20__pairing_requests.sql  V23__list_workspace_files_escape_like.sql  V8__settings.sql
profiles/: local-sandbox.toml  local.toml  server-multitenant.toml  server.toml
scripts/: build-all.sh  check-boundaries.sh  check-i18n-parity.sh  dev-setup.sh  pre-commit-safety.sh
src/: NETWORK_SECURITY.md  app.rs  bootstrap.rs  (+8 more)
(+654 files in other folders)
